# micro-services-sandbox

./: .gitignore  README.md
movies-reviews/: README.md  docker-compose.yaml  post_reviews.py
movies-reviews/api/: Dockerfile  go.mod  go.sum  main.go
movies-reviews/ingestion/: go.mod  main.go
movies-reviews/processing/: Dockerfile  README.md  pyproject.toml  requirements.txt
movies-reviews/processing/processing/: __main__.py
